report - refonte de la présentation des expérience mené par le labos

--- a/ST50_Docs/rapport/ST50__ROMETPierre.tex
+++ b/ST50_Docs/rapport/ST50__ROMETPierre.tex
@@ -154,63 +154,59 @@ Suite à cette introduction, nous allons poursuivre avec la présentation du lab
   \newpage
   
   \section{Projet et thématique}
-  Voici quelques exemples de projets sur lesquels les équipes du laboratoire sont engagées:
+  
+		Entre 2015 et 2017, le laboratoire de Physique Nucléaire et des Hautes Energie (LPNHE) à travaillé, et continue de développer une vinghtaine de projet. Ces projets s'intègre dans différents domaines d'activité au sein du laboratoire que voici.
+  	
   \begin{itemize}
-  \item Physique des particules: Frontière en énergie
-  
-  	- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire.
-  	
-  \begin{figure}[!ht]
-    \center
-    %\hfill\hbox to 0pt{\hss\includegraphics[width=10cm]{ATLASLHC.jpg}\hss}\hfill\null\newline
-    \includegraphics[width=9cm]{ATLASLHC.jpg}
-    \caption{Expérience Atlas}
-	\end{figure}
-  	
- 	
- 	- L'expérience CDF pour "Collider Detector at Fermilab" met en jeu un accélérateur de particules, nommé le "Tevatron", faisant accélérer et se collisionner, des prontons ainsi que des antiprotons. 	Il a pour but d'observer et de découvrir l'identité ainsi que les propriétés des particules qui compose l'univers, et de comprendre les interactions entre ces dernières.
- 	CDF est en particulier connu pour la découverte du "Quark Top" en 1994, confirmé par l'expérience "D0" l'année suivante.
- 	
-	\begin{figure}[!ht]
-    \center
-    %\hfill\hbox to 0pt{\hss\includegraphics[width=11cm]{D0.jpg}\hss}\hfill\null\newline%
-    \includegraphics[width=11cm]{D0.jpg}
-    \caption{Expérience CDF (Collider Detector at Fermilab)}
-	\end{figure} 
- 	
-  \item Physique des saveurs:
- 
-	- "T2K" pour Tokai to Kamioka est une expérience de physique des particules situées au Japon, dans laquelle collabore de nombreux pays. Il s'agit d'une expérience d'oscillation de neutrinos, mesurant un faisceau de neutrinos muoniques à courte (280 m) et longue distance (295 km). 
-	Le but principal de T2K est de mesurer l'oscillation des neutrinos muoniques en neutrinos électroniques afin de mesurer le derniers paramètre de la matrice "Pontecorvo-Maki-Nakagawa-Sakata" permettant d'expliquer l'oscillation deneutrinos prédite par Bruno Pontecorvo en 1957.	
-	
-  	-"SLAC" ou "BABAR", est une expérience de physique des particules réalisées au Stanford Linear Accelerator Center. Elle est dédiée à létudes de la physique des mésons B et de la violation de la symétrie CP dans leur désintégration faibles.
-  	
-  \textsc{\begin{figure}[h]
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=4cm]{T2K.jpg}
-         \caption{Expérience T2K (Tokai to Kamioka)}
-     \end{minipage}
-     \hfill%
-     \begin{minipage}[c]{.46\linewidth}
-         \centering
-         \includegraphics[width=5cm]{SLACBABAR.png}
-         \caption{Expérience SLAC (ou BABAR)}
-     \end{minipage}
- 	\end{figure}} 	
-  
-  \item Cosmologie:
-  
-  La compréhension de la nature, de la matière et de l'énergie noires nécessite de mesurer les paramètres cosmologiques avec une précision de l'ordre du pourcent. Les moyens à mettre en oeuvre pour atteindre cet objectif passent par l'échantillonnage de très grandes portions de l'univers visible. À cette fin, il faut non seulement pouvoir observer à grande distance, mais avec un dispositif à très grand champ.
-  
-  Pour cela, le projet au sol "LSST", vise à l'observation répétée de l'ensemble du ciel visible, en s'affranchissant d'une partie des effets instrumentaux et atmosphériques. Il est basé sur un télescope au sol de 8.4 mètres de diamètre équipé d'une caméra de 3.2 milliard de pixels. L'ensemble, implanté au Chili, couvrira un champ de 9.6 degrés carrés sur le ciel balayé à la cadence d'un champ toutes les 40 secondes. Chaque champ sera ainsi visité 1000 fois durant les 10 ans de prise de données du programme.\newline
-    	
-	\begin{figure}[!ht]
-    \center
-    %\hfill\hbox to 0pt{\hss\includegraphics[width=8cm]{lsst.jpg}\hss}\hfill\null
-    \includegraphics[width=5cm]{lsst.jpg}
-    \caption{Projet LSST (Large Synoptic Survey Telescope)}
-	\end{figure} 
+		\item Masses et intéractions fondalentales
+		
+			- L'expérience Atlas, au LHC (Cern), est l'un des deux détecteurs polyvalents du grand collisionneur de hadrons (LHC). Il étudie des domaines de de physique très variés, de la recherche du boson de higgs, aux dimensions supplémentaires de l'espace-temps, en passant par les particules qui pourraient former la matière noire. Il regroupe un large ensemble de projet portant sur la désintégration du boson de Higgs, la physique du quark top, les sections efficaces de jets, de la calibration des électrons et des photons, du R\&D pour la fabrication d'un nouveau trajectographe ainsi que pour un "High Granularity Timing Detector".
+			
+			- Le projet CALICE, portant sur de la recherche et développement d'un nouveau calorimètre auprès de l'International Linear Collider (ILC). Le projet CALICE (Calorimeter for Linear Collider with Electrons) est un projet développé depuis quelques années pour concevoir des calorimètres de hautes granularité, ils pourront donc mesurer avec une grande précision le flux des particules et permettre de discerner les particules très proches lors du développement des gerbes, afin d'avoir un maximum d'informations sur toutes les désintégrations de particules.			
+			
+			- Le projet DZero, portant sur la physique du boson de Higgs et du top au Tevatron. Après la mise en évidence de la production de quarks top célibataire et la mesure de Delta Ms, la recherche du boson de Higgs est devenu l'enjeu majeur des expériences Dzero et CDF auprès du collisionneur TeVatron à Fermilab. 
+			
+		\item Asymétrie matière-antimatière
+		
+			- L'expérience LHCb (Large Hadron Collider Beauty) portant sur la physique des saveurs lourdes au LHC.
+				LHCb explore les légères différences qui existent entre matière et antimatière grâce à l’étude d’un type de particule appelé « quark beauté » ou « quark b ». Au lieu d’utiliser un détecteur fermé au niveau du point de collision, tel que ceux d’ATLAS et de CMS, l’expérience LHCb a recours à plusieurs sous-détecteurs conçus pour observer principalement les particules émises « à petits angles », vers l’avant, dans le sens du faisceau.
+			
+			- L'expérience "BABAR", est une expérience de physique des particules réalisées au Stanford Linear Accelerator Center. Elle est dédiée à létudes de la physique des mésons B et de la violation de la symétrie CP dans leur désintégration faibles.
+			
+			- Le projet T2K, "T2K" pour Tokai to Kamioka est nouvel oscillateur à neutrons. Cette expérience de physique des particules situées au Japon, dans laquelle collabore de nombreux pays. Il s'agit d'une expérience d'oscillation de neutrinos, mesurant un faisceau de neutrinos muoniques à courte (280 m) et longue distance (295 km). Le but principal de T2K est de mesurer l'oscillation des neutrinos muoniques en neutrinos électroniques afin de mesurer le derniers paramètre de la matrice "Pontecorvo-Maki-Nakagawa-Sakata" permettant d'expliquer l'oscillation deneutrinos prédite par Bruno Pontecorvo en 1957.	
+			
+			- Le projet COMET, mettant en place des expérience de phénoménologie et la modélisation pour la physique des particules. L’expérience recherche la conversion cohérente sans neutrino d’un muon en électron dans un atome d’aluminium muonique, signal éventuel de physique au-delà du Modèle Standard.
+			
+			- Le projet SHiP (Search for Hidden Particles) est un projet d’expérience à cible fixe ayant comme projectiles les protons de 400GeV du faisceau du SPS (Super Proton Synchrotron) au CERN. Le détecteur est conçu avec une géométrie favorisant la recherche de particules dites invisibles. Ces dernières sont prédites par bon nombre de modèles théoriques et leur confirmation pourrait élucider certains des grands mystères de la physique actuelle tels que l’origine de la masse des neutrinos, de la matière noire ou encore de l’asymétrie baryonique de l’Univers. Ces modèles postulent l’existence de particules interagissant très faiblement avec celles du Modèle Standard comme par exemple les neutrinos stériles, les particules supersymétriques, les axions, ou encore les photons sombres.
+			
+		\item Rayonnement Cosmique et Matière Noire
+			
+			- Le projet AUGER.
+			En 1938, P. Auger a mis en évidence l'existence de " grandes gerbes cosmiques atmosphériques contenant des corpuscules ultra pénétrantes, la technique utilisée etait celle des "compteurs en coïncidence ". Aujourd'hui l'observatoire Pierre Auger continue de founir à la communauté scientifique des données précises sur les gerbes atmosphérique les plus énergétiques jusqu'à E-10\^20 eV.
+			
+			- Le projet H.E.S.S est une expérience d'astronomie gamma dans le désert de Namibie. H.E.S.S est constituée de quatre télescopes atmosphériques à effet Cherenkov possédant chacun un miroir d’environ 12 mètres de diamètre, correspondant à un peu plus de 100 m2 de surface réfléchissante, placés aux quatre coins d’un carré de 120 mètres de côté. Ces télescopes opèrent entre environ 100 GeV et quelques dizaines de TeV. Au centre, un cinquième télescope équipé d’un miroir six fois plus grand en surface est sensible aux rayonnements de plus basse énergie, aux alentours de 20 GeV. 
+			
+			- L'expérience CTA (Cherenkov Telescope Array) constitue la prochaine génération de réseaux de télescopes à effet Cherenkov atmosphérique qui devrait prendre ses premières données à l’horizon 2022. Il a fait l’objet de la constitution d’une collaboration internationale de plus de 1300 scientifiques répartis dans 210i nstitutions de 32 pays. Ses objectifs sont de couvrir un domaine en énergie des rayonnements cosmiques détectés de dix GeV à plusieurs centaines de TeV avec une sensibilité accrue de plus d’un ordre de grandeur par rapports aux expériences existantes actuellement (essentiellement HESS, MAGIC et VERITAS).
+			
+			- L’expérience DAMIC (DArk Matter In CCDs) se propose de détecter le recul induit par la matière noire sur les noyaux de silicium composant les détecteurs à couplage capacitif (les CCD) qui servent habituellement de détecteur de photons en astronomie ou de particules en physique des hautes énergies. Le seuil de détection très bas des CCD (3.5 eV pour former une paire électron-trou) et la masse relativement faible du noyau de silicium permettent de sonder le domaine de masse des WIMP (Weakly Interacting Massive Particles) et d’autres candidats matière noire entre 1 et 20 GeV. Ce domaine en énergie est peu accessible aux grands détecteurs à liquide noble du fait de leur seuil de détection plus élevé.
+						
+			- Le projet DarkSide pour la recherche de matière noire repose sur l’utilisation d’une Chambre à Projection Temporelle (TPC) à l’Argon liquide en double phase. Un détecteur de 50 kg (DS-50) est actuellement en prise de données au LNGS. Il sera suivi par un détecteur de 20 t, DarkSide-20k.
+			
+			- Le projet XENON.
+			Le détecteur XENON1T, développé par la collaboration XENON pour la recherche directe de matière noire, est l’expérience la plus sensible à l’heure actuelle dans la gamme de masse au-delà d’environ 10 GeV. Il est constitué par une TPC (Time Projection Chamber) remplie de 3.5 tonnes de xénon liquide, située dans le laboratoire souter-
+rain du Gran Sasso, en Italie. Il vise à détecter la faible charge et la petite quantité de lumière qui devraient être émises à la suite de l’interaction d’une particule de matière noire avec un noyau de xénon. La construction de XENON1T a commencé en 2013 et s’est achevée en octobre 2015, suivie par une phase de mise en service et de calibration.
+			
+		\item Cosmologie et énergie noire
+		
+			- Le projet Supernovae, consiste en l'observation de supernova dans un gamme de redshift.
+			
+			- Le projet au sol "LSST", vise à l'observation répétée de l'ensemble du ciel visible, en s'affranchissant d'une partie des effets instrumentaux et atmosphériques. Il est basé sur un télescope au sol de 8.4 mètres de diamètre équipé d'une caméra de 3.2 milliard de pixels. L'ensemble, implanté au Chili, couvrira un champ de 9.6 degrés carrés sur le ciel balayé à la cadence d'un champ toutes les 40 secondes. Chaque champ sera ainsi visité 1000 fois durant les 10 ans de prise de données du programme.
+			
+			- eBOSS/DESI
+			L’objectif principal du groupe est la mesure de l’échelle du pic acoustique des oscillations de baryons (BAO, pour Baryon Acoustic Oscillations), qui constitue un indicateur de distance angulaire et une mesure du taux d’expansion au redshift des sources analysées. On obtient ainsi une précision inégalée à haut redshift. Ce pic se mesure comme un excès de corrélation des traceurs de densités à une distance de séparation précise (en coordonnées co-mobiles).
+			
+			- Etude de la dynamique des systèmes auto-gravitants
+			La motivation principale pour la recherche théorique du groupe est le problème de la formation des grandes structures de l’univers. Le défi large est de rendre compte systématiquement des observations pertinentes (distribution des galaxies, lentillage faible, CMB etc.) dans le cadre de la cosmologie standard (« Lambda CDM ») ou de ses variantes, et notamment dans le régime « non-linéaire ». L’accent de la recherche du groupe porte sur des questions fondamentales théoriques dans ce contexte, et il s’attache notamment à comprendre la dynamique non-linéaire de la matière purement gravitante et non-relativiste, approximation valable pour une grande partie de l’évolution de l’univers dans le modèle standard.		
 		  	
   \end{itemize}
   
